fix: preview mis alignment in awards

--- a/src/components/awards/style.scss
+++ b/src/components/awards/style.scss
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  position: relative;
+  height: 100%;
 
   .grid {
     display: grid;
@@ -11,7 +13,6 @@
     justify-content: center;
     gap: 20px;
     padding-top: 20px;
-    position: relative;
     padding-bottom: 10px;
 
     .image-wrapper {
